methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:35: error: '=' expected but identifier found.
  def marquer sol(){
              ^PatternPicture:39: error: illegal start of simple expression
} 
^