methods.picture.PatternPicture.scala.code
override def run() {
  var color:Color = Color.BLUE
  for (i <- 0 to 1){
    for(j <- 0 to 1){
      setPos(i*4,j*4)
      for (k <- 1 to 4)
    		faireV(k)
    }
  }
  setPos(4,3)
  
  def faireV(k:Int){
    k match{
      case 1 => color = Color.YELLOW
      case 2 => color = Color.GREEN
    	case 3 => color = Color.BLUE
    	case 4 => color = Color.RED
    }
    setCouleurBrosse(color)
    avance()
		marquer sol()
    color match{
      case Color.RED => color = Color.YELLOW
      case Color.YELLOW => color = Color.GREEN
    	case Color.GREEN => color = Color.BLUE
    	case Color.BLUE => color = Color.RED
    }
    setCouleurBrosse(color)
    marquer sol()
    avance()
    avance()
    droite()
  }
  
  def marquer sol(){
    baisseBrosse()
    leveBrosse()
  }
}